fix: fix horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 100%;
 }
 
 body{
@@ -149,7 +150,7 @@ header .container-header{
 }
 
 #cardGaleria{
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url('./images/IMG_2728.HEIC');
+    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.9)), url('./images/IMG_2728.HEIC');
     background-position: center 25%;
     background-size: cover;
     background-repeat: no-repeat;
